404 and footer fixes

--- a/content/test.html
+++ b/content/test.html
@@ -1,6 +1,6 @@
 +++
-title = "Kid Stuff!"
-subtitle = "Fun Stuff to Play, Learn & Do."
+title = "Test!"
+subtitle = ""
 description = ""
 tags = []
 date = "2007-12-13"
@@ -9,22 +9,23 @@ slug = ""
 type = ""
 +++
 
-<!-- Control buttons -->
-<div id="myBtnContainer" class="container has-text-centered" style="margin-top: -2em;">
-  <button class="btn active is-size-6" onclick="filterSelection('all')"><i class="fas fa-th-large"></i> Show All</button>
-  <button class="btn is-size-6" onclick="filterSelection('artcraft')"><i class="fas fa-paint-brush"></i> Arts & Crafts</button>
-  <button class="btn is-size-6" onclick="filterSelection('animals')"><i class="fas fa-dog"></i> Animals</button>
-  <button class="btn is-size-6" onclick="filterSelection('earth')"><i class="fas fa-globe-africa"></i> Earth</button>
-  <button class="btn is-size-6" onclick="filterSelection('games')"><i class="fas fa-gamepad"></i> Games</button>
-  <button class="btn is-size-6" onclick="filterSelection('science')"><i class="fas fa-microscope"></i> Science</button>
-  <button class="btn is-size-6" onclick="filterSelection('sports')"><i class="fas fa-futbol"></i> Sports</button>
-</div>
+  <div class="container content">
+    <div class="columns is-centered">
+      <div class="column is-half is-size-4">
+      <img src="/img/john-travolta.gif">
+      <p>Sorry. The page you're looking for could not be found. Please try your search <a href="https://www.google.com/search?q=site%3Adjkonigi.com">at Google</a> or <a href="https://docs.google.com/forms/d/e/1FAIpQLSfHve_3pTqk7KtbmRcHhqGFh3_eQGckqj2bR97e9pbipTbOGw/viewform">contact me for assistance.</a></p>
+      </div>
+    </div>
+  </div>
 
-<!-- The filterable elements. Note that some have multiple class names (this can be used if they belong to multiple categories) -->
-
-
-
-
+  <style>
+    .hero { display: none; }
+    .content {
+      background: #fff;
+      color: #111;
+      border-radius: 20px;
+    }
+  </style>
 
     </div>
   </div>
