--- a/content/test.html
+++ b/content/test.html
@@ -24,9 +24,11 @@ type = ""
       background: #fff;
       color: #111;
       border-radius: 20px;
+      text-align: center;
+    }
+    img {
+      margin: auto;
+      
     }
   </style>
 
-    </div>
-  </div>
-</section>
